compiler/testData/diagnostics/tests/duplicateJvmSignature/specialNames/defaults.kt
// !DIAGNOSTICS: -UNUSED_PARAMETER

<!CONFLICTING_PLATFORM_DECLARATIONS!>class C<!> {
    <!CONFLICTING_PLATFORM_DECLARATIONS!>fun `a$default`(c: C, x: Int, m: Int)<!> {}
    fun a(x: Int = 1) {}
}